@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/tuxonice-userui
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.7 2008/08/23 06:25:06 cardoe Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.8 2009/01/08 20:11:26 nelchael Exp $
+
+*tuxonice-userui-0.7.3 (08 Jan 2009)
+
+  08 Jan 2009; <nelchael@gentoo.org> +tuxonice-userui-0.7.3.ebuild:
+  Version bump, dropped fbsplash patch for now.
 
   23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
   add GLEP 56 USE flag desc from use.local.desc
